upgrade path: ant backup-for-upgrade;...install... ant restore